bushes and saplings now fit colour boundaries!