@@ -19,6 +19,7 @@ import net.minecraft.world.level.levelgen.VerticalAnchor;
 import net.minecraft.world.level.levelgen.blockpredicates.BlockPredicate;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.placement.*;
+import org.joml.Vector2f;
 
 import java.util.EnumMap;
 import java.util.List;
@@ -75,10 +76,25 @@ public class ModPlacedFeatures {
     public static final ResourceKey<PlacedFeature> GREEN_GLOWING_HICKORY_SAPLING = registerKey("green_glowing_hickory_sapling");
 
     public static final ResourceKey<PlacedFeature> HICKORY_BUSH = registerKey("hickory_bush");
-    public static final ResourceKey<PlacedFeature> GLOWING_HICKORY_BUSH = registerKey("glowing_hickory_bush");
+    public static final ResourceKey<PlacedFeature> RED_GLOWING_HICKORY_BUSH = registerKey("red_glowing_hickory_bush");
+    public static final ResourceKey<PlacedFeature> BROWN_GLOWING_HICKORY_BUSH = registerKey("brown_glowing_hickory_bush");
+    public static final ResourceKey<PlacedFeature> YELLOW_GLOWING_HICKORY_BUSH = registerKey("yellow_glowing_hickory_bush");
+    public static final ResourceKey<PlacedFeature> GREEN_GLOWING_HICKORY_BUSH = registerKey("green_glowing_hickory_bush");
+
     public static final ResourceKey<PlacedFeature> FALLEN_HICKORY_TREE = registerKey("fallen_hickory_tree");
 
     public static final ResourceKey<PlacedFeature> PODZOL_VEIN = registerKey("podzol_vein");
+
+
+    static final double NOISE_SCALE = 0.010;
+    public static final EnumMap<HickoryColour, Vector2f> HICKORY_NOISES = new EnumMap<>(HickoryColour.class);
+    static {
+        HICKORY_NOISES.put(HickoryColour.HICKORY, null);
+        HICKORY_NOISES.put(HickoryColour.RED_GLOWING, new Vector2f(-1.0f, -0.45f));
+        HICKORY_NOISES.put(HickoryColour.BROWN_GLOWING, new Vector2f(-0.5f, 0.0f));
+        HICKORY_NOISES.put(HickoryColour.YELLOW_GLOWING, new Vector2f(-0.05f, 0.45f));
+        HICKORY_NOISES.put(HickoryColour.GREEN_GLOWING, new Vector2f(0.4f, 1.0f));
+    }
 
     public static final EnumMap<HickoryColour, ResourceKey<PlacedFeature>> HICKORY_TREES = new EnumMap<>(HickoryColour.class);
     static {
@@ -96,6 +112,15 @@ public class ModPlacedFeatures {
         HICKORY_SAPLINGS.put(HickoryColour.BROWN_GLOWING, BROWN_GLOWING_HICKORY_SAPLING );
         HICKORY_SAPLINGS.put(HickoryColour.YELLOW_GLOWING, YELLOW_GLOWING_HICKORY_SAPLING);
         HICKORY_SAPLINGS.put(HickoryColour.GREEN_GLOWING, GREEN_GLOWING_HICKORY_SAPLING);
+    }
+
+    public static final EnumMap<HickoryColour, ResourceKey<PlacedFeature>> HICKORY_BUSHES = new EnumMap<>(HickoryColour.class);
+    static {
+        HICKORY_BUSHES.put(HickoryColour.HICKORY, HICKORY_BUSH);
+        HICKORY_BUSHES.put(HickoryColour.RED_GLOWING, RED_GLOWING_HICKORY_BUSH);
+        HICKORY_BUSHES.put(HickoryColour.BROWN_GLOWING, BROWN_GLOWING_HICKORY_BUSH );
+        HICKORY_BUSHES.put(HickoryColour.YELLOW_GLOWING, YELLOW_GLOWING_HICKORY_BUSH);
+        HICKORY_BUSHES.put(HickoryColour.GREEN_GLOWING, GREEN_GLOWING_HICKORY_BUSH);
     }
 
     public static void bootstrap(BootstrapContext<PlacedFeature> context) {
@@ -168,17 +193,21 @@ public class ModPlacedFeatures {
         register(context, NATURAL_SPORE_BLASTER, configuredFeatures.getOrThrow(ModConfiguredFeatures.NATURAL_SPORE_BLASTER),
                 ModOrePlacement.commonOrePlacement(256, HeightRangePlacement.triangle(VerticalAnchor.absolute(-64), VerticalAnchor.absolute(80))));
 
-        register(context, HICKORY_TREE, configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_TREE),
-                VegetationPlacements.treePlacement(PlacementUtils.countExtra(64, 0.25f, 32), ModBlocks.HICKORY_SAPLING.get()));
 
-        double noiseScale = 0.010;
-        registerGlowingHickoryTree(context, configuredFeatures, HickoryColour.RED_GLOWING,   noiseScale, -1.0f, -0.45f);
-        registerGlowingHickoryTree(context, configuredFeatures, HickoryColour.GREEN_GLOWING, noiseScale, -0.5f, 0.0f);
-        registerGlowingHickoryTree(context, configuredFeatures, HickoryColour.YELLOW_GLOWING,noiseScale, -0.05f, 0.45f);
-        registerGlowingHickoryTree(context, configuredFeatures, HickoryColour.BROWN_GLOWING, noiseScale, 0.4f, 1.0f);
+        register(context, HICKORY_TREE, configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_TREE),
+                VegetationPlacements.treePlacement(PlacementUtils.countExtra(32, 0.25f, 16), ModBlocks.HICKORY_SAPLING.get()));
+        register(context, HICKORY_SAPLING, configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_SAPLING),
+                List.of(RarityFilter.onAverageOnceEvery(1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome()));
+        register(context, HICKORY_BUSH, configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_BUSH),
+                VegetationPlacements.treePlacement(PlacementUtils.countExtra(48, 0.5f, 16)));
 
         for (HickoryColour colour : HickoryColour.values()) {
-            registerHickorySapling(context, configuredFeatures, colour);
+            if (colour != HickoryColour.HICKORY) {
+                Vector2f noise = HICKORY_NOISES.get(colour);
+                registerGlowingHickoryTree(context, configuredFeatures, colour, NOISE_SCALE, noise.x, noise.y);
+                registerGlowingHickorySapling(context, configuredFeatures, colour, NOISE_SCALE, noise.x, noise.y);
+                registerGlowingHickoryBush(context, configuredFeatures, colour, NOISE_SCALE, noise.x, noise.y);
+            }
         }
 
         register(context, SPOTTED_WINTERGREEN, configuredFeatures.getOrThrow(ModConfiguredFeatures.SPOTTED_EVERGREEN),
@@ -186,10 +215,6 @@ public class ModPlacedFeatures {
         register(context, PINKSTER_FLOWER, configuredFeatures.getOrThrow(ModConfiguredFeatures.PINKSTER_FLOWER),
                 List.of(RarityFilter.onAverageOnceEvery(16), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome()));
 
-        register(context, HICKORY_BUSH, configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_BUSH),
-                VegetationPlacements.treePlacement(PlacementUtils.countExtra(7, 0.5f, 3)));
-        register(context, GLOWING_HICKORY_BUSH, configuredFeatures.getOrThrow(ModConfiguredFeatures.GLOWING_HICKORY_BUSH),
-                VegetationPlacements.treePlacement(PlacementUtils.countExtra(7, 0.5f, 3)));
         register(context, FALLEN_HICKORY_TREE, configuredFeatures.getOrThrow(ModConfiguredFeatures.FALLEN_HICKORY_TREE),
                 List.of(RarityFilter.onAverageOnceEvery(8), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome()));
 
@@ -202,15 +227,30 @@ public class ModPlacedFeatures {
         List<PlacementModifier> treeMods = VegetationPlacements.treePlacement(PlacementUtils.countExtra(count, 0.25f, 8), ModBlocks.HICKORY_SAPLINGS.get(colour).get());
         List<PlacementModifier> patchMods = List.of(new LargePatchNoiseModifier(scale, minNoise, maxNoise));
 
-        List<PlacementModifier> allMods = Stream.concat(treeMods.stream(), patchMods.stream()).collect(Collectors.toList());
+        List<PlacementModifier> allMods = Stream.concat(treeMods.stream(), patchMods.stream()).toList();
 
         register(context, HICKORY_TREES.get(colour), configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_TREES.get(colour)), allMods);
     }
 
-    private static void registerHickorySapling(BootstrapContext<PlacedFeature> context, HolderGetter<ConfiguredFeature<?, ?>> configuredFeatures, HickoryColour colour) {
-        int chance = colour == HickoryColour.HICKORY ? 2 : 8;
-        register(context, HICKORY_SAPLINGS.get(colour), configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_SAPLINGS.get(colour)),
-                List.of(RarityFilter.onAverageOnceEvery(chance), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome()));
+    private static void registerGlowingHickorySapling(BootstrapContext<PlacedFeature> context, HolderGetter<ConfiguredFeature<?, ?>> configuredFeatures, HickoryColour colour, double scale, float minNoise, float maxNoise) {
+        int chance = 4;
+        List<PlacementModifier> saplingMods = List.of(RarityFilter.onAverageOnceEvery(chance), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome());
+        List<PlacementModifier> patchMods = List.of(new LargePatchNoiseModifier(scale, minNoise, maxNoise));
+
+        List<PlacementModifier> allMods = Stream.concat(saplingMods.stream(), patchMods.stream()).toList();
+
+        register(context, HICKORY_SAPLINGS.get(colour), configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_SAPLINGS.get(colour)), allMods);
+    }
+
+    private static void registerGlowingHickoryBush(BootstrapContext<PlacedFeature> context, HolderGetter<ConfiguredFeature<?, ?>> configuredFeatures, HickoryColour colour, double scale, float minNoise, float maxNoise) {
+        int value = 8;
+
+        List<PlacementModifier> bushMods = VegetationPlacements.treePlacement(PlacementUtils.countExtra(value, 0.5f, 4));
+        List<PlacementModifier> patchMods = List.of(new LargePatchNoiseModifier(scale, minNoise, maxNoise));
+
+        List<PlacementModifier> allMods = Stream.concat(bushMods.stream(), patchMods.stream()).toList();
+
+        register(context, HICKORY_BUSHES.get(colour), configuredFeatures.getOrThrow(ModConfiguredFeatures.HICKORY_BUSHES.get(colour)), allMods);
     }
 
     private static ResourceKey<PlacedFeature> registerKey(String name) {
